--- a/index.html
+++ b/index.html
@@ -1,58 +1,55 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript-Exc</title>
-    <link rel="stylesheet" href="lib/css/bootstrap.css">
-    <link rel="stylesheet" href="lib/css/bootstrapExtra.rtl.css">
-    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
- 
-
-<h2 class="text-center text-success my-5 mx-auto">تمرین</h2>
-<h4 class="text-center">
- از کاربر با prompt دو تا عدد بگیرید و عملیات ریاضی جمع و ضرب و تقسیم و ... روش انجام بدید .
-</h4>
 
 
+    <div class="row justify-content-center">
+        <h1 class="text-center text-primary mt-5">Register Form</h1>
+        <div class="col-4 mb-5 border border-1 py-4 rounded-4">
+            <input type="text" name="" id="" class="form-control mb-3" placeholder="Name" />
+            <input type="password" name="" id="" class="form-control mb-3" placeholder="Password" />
+            <input type="email" name="" id="" class="form-control mb-3" placeholder="Email" />
+            <button class="btn btn-success col-12 d-flex mx-auto justify-content-center">Submit</button>
+        </div>
+    </div>
 
 
+    <div class="table-responsive col-8 mx-auto">
+        <table class="table table-primary text-center table-bordered">
+            <thead>
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Password</th>
+                    <th scope="col">Email</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="">
 
 
+                </tr>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            </tbody>
+        </table>
+    </div>
 
 
 
 
 
 
-
-
-
-    <script src="lib/js/bootstrap.bundle.js"></script>
-    <script src="js/scripts.js"></script>
+    <script type="" src="app.js"></script>
 </body>
+
 </html>
