--- a/79 - Register form IndexedDB/index.html
+++ b/79 - Register form IndexedDB/index.html
@@ -12,16 +12,17 @@
 
 <body>
 
-
-    <div class="row justify-content-center">
-        <h1 class="text-center text-primary mt-5">Register Form</h1>
-        <div class="col-4 mb-5 border border-1 py-4 rounded-4">
-            <input type="text" name="" id="" class="form-control mb-3" placeholder="Name" />
-            <input type="password" name="" id="" class="form-control mb-3" placeholder="Password" />
-            <input type="email" name="" id="" class="form-control mb-3" placeholder="Email" />
-            <button class="btn btn-success col-12 d-flex mx-auto justify-content-center">Submit</button>
+    <form action="">
+        <div class="row justify-content-center">
+            <h1 class="text-center text-primary mt-5">Register Form</h1>
+            <div class="col-4 mb-5 border border-1 py-4 rounded-4">
+                <input type="text" name="" id="" class="form-control mb-3" placeholder="Name" required />
+                <input type="password" name="" id="" class="form-control mb-3" placeholder="Password" required />
+                <input type="email" name="" id="" class="form-control mb-3" placeholder="Email" required />
+                <input type="submit" class="btn btn-success col-12 d-flex mx-auto justify-content-center" name="" id="" value="Submit">
+            </div>
         </div>
-    </div>
+    </form>
 
 
     <div class="table-responsive col-8 mx-auto">
@@ -32,6 +33,8 @@
                     <th scope="col">Name</th>
                     <th scope="col">Password</th>
                     <th scope="col">Email</th>
+                    <th scope="col">Option</th>
+
                 </tr>
             </thead>
             <tbody>
