--- a/index.html
+++ b/index.html
@@ -2,46 +2,57 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Music Player</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="p-5">
-    <audio src="" id="audio"></audio>
+<body>
 
-    <div class="container text-center">
-        <button class="btn btn-outline-info" id="backward">‹‹ 10s Backward</button>
-        <button class="btn btn-dark" id="previous">Previous</button>
-        <button class="btn btn-danger" id="stop">■ Stop</button>
-        <button class="btn btn-success" id="pause">∥Pause</button>
-        <button class="btn btn-primary" id="play">▶ Play</button>
-        <button class="btn btn-dark" id="next">Next</button>
-        <button class="btn btn-outline-info" id="forward">Forward 10s ››</button>
-        <button class="btn btn-outline-danger" id="speed">1.5X</button>
-        <button class="btn btn-outline-warning" id="reset">Reset</button>
-        <button class="btn btn-outline-primary" id="repeat">Repeat ⇌</button>
-        <button class="btn btn-outline-primary" id="random">Random</button>
-
-        <div class="progress-container">
-            <div class="progress"></div>
-            <div class="duration">
-                <span class="current-duration">00:00</span>
-                <span class="total-duration">00:00</span>
+    <form action="">
+        <div class="row justify-content-center">
+            <h1 class="text-center text-primary mt-5">Register Form</h1>
+            <div class="col-4 mb-5 border border-1 py-4 rounded-4">
+                <input type="text" name="" id="" class="form-control mb-3" placeholder="Name" required />
+                <input type="password" name="" id="" class="form-control mb-3" placeholder="Password" required />
+                <input type="email" name="" id="" class="form-control mb-3" placeholder="Email" required />
+                <input type="submit" class="btn btn-success col-12 d-flex mx-auto justify-content-center" name="" id="" value="Submit">
             </div>
         </div>
+    </form>
 
-        <input class="form-control mt-5" type="file" id="file-input" placeholder="Select Your File ..." multiple />
-        <input type="number" placeholder="Enter seconds :" id="duration" class="form-control mt-3" />
-        <input type="number" placeholder="Enter Volume :" id="volume" class="form-control mt-3" />
+
+    <div class="table-responsive col-8 mx-auto">
+        <table class="table table-primary text-center table-bordered">
+            <thead>
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Password</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Option</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="">
+
+
+                </tr>
+
+            </tbody>
+        </table>
     </div>
 
-    <h1 class="text-info text-center" id="trackname"></h1>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+
+
+
+
+    <script type="" src="app.js"></script>
 </body>
 
 </html>
