--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             </div>
         </div>
     </div>
-    <div id="main-container" class="main container-fluid px-4">
+    <div id="main-container" class="main container-fluid px-4 ">
+
         <!-- Foods Items -->
 
         <!-- Menu Item -->
@@ -50,6 +51,42 @@
     </div>
     <!-- Foods Items -->
     <div class="footer"></div>
+
+    <!-- Modal -->
+
+    <div class="row dialog-container">
+        <!-- <div class="dialog  col-11 col-sm-10 col-md-7 col-lg-5 col-xl-3 w-xl-30 d-flex flex-column mx-auto rounded rounded-4 overflow-hidden position-fixed">
+            <div class=" w-100 d-flex justify-content-center align-items-center rounded rounded-top-4 overflow-hidden ">
+                <img src="images/سوپ-جو-barley-soup-normal.jpg" class="rounded-top-4" alt="" />
+            </div>
+            <div class="dialog-cart py-3 w-100 d-flex justify-content-center  rounded-bottom-4 overflow-hidden align-items-center bg-secondary">
+                <div class="dialog-desc w-90 h-80 rounded rounded-3">
+                    <div class="dialog-title-container d-flex justify-content-around w-100 text-white pt-1">
+                        <small class="text-primary fs-6s"> از </small>
+                        <h1 class="dialog-title fs-6s fs-sm-6l">سوپ جو🌾 | Barley Soup</h1>
+                        <h1 class="dialog-title fs-6s fs-sm-6l">
+                            75
+                            <small class="text-primary fs-6s"> هزار تومان </small>
+                        </h1>
+                    </div>
+
+                    <div class="d-flex justify-content-center w-100">
+                        <button class="bg-primary py-3 w-80 border-0 rounded rounded-5 user-select-none mt-4 fs-6s fs-sm-6l" id="add-to-card">افزودن به یادداشت
+                            سفارش</button>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+    </div>
+
+
+
+
+
+
+    
+
+    
 
     <script src="js/app.js"></script>
 </body>
