--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
             <span class="theme-item rounded-circle  p-2 my-3" style="background-color: #e3ee0e;" id="theme4"></span>
             <span class="theme-item rounded-circle  p-2 my-3" style="background-color: #d30808;" id="theme5"></span>
         </div>
-
     </div>
 
     <div class="header container-fluid mx-auto bg-primary row fixed-top ">
 
         <!-- سبد سفارش -->
 
-        <div class="order-list-container text-end py-3 px-4 position-absolute ">
-            <img class="order-list-icon w-10 w-sm-6 w-md-5 w-lg-4 w-xl-3 " src="images/icons/order-list.svg" alt="">
+        <div class="order-list-container text-end pt-1 px-4 position-absolute  ">
+            <img class="order-list-icon w-7 w-sm-6 w-md-5 w-lg-4 w-xl-3 " src="images/icons/order-list.svg" alt="">
             <div class="order-list-content h-100vh  bg-dark position-absolute end-0 top-0 z-n1 text-white w-0">
                 <p class="order-list-header text-center py-2 fade-out">لیست سفارش مشتری</p>
                 <div class="order-list-body fade-out"></div>
@@ -49,13 +48,12 @@
 
 
 
-        <div class="brand row"></div>
-        <div class="top-nav row justify-content-center">
-            <div class="all-cat row justify-content-center ">
-                <a href="#main-container" id="allCategoriesBtn" class="float-start bg-primary-subtle col-auto rounded rounded-5 px-5 py-1 mt-3">
-                    همه دسته‌بندی‌ها</a>
+        <!-- <div class="brand row"></div> -->
+        <div class="top-nav row justify-content-center mx-auto fs-6s fs-sm-6 ">
+            <div class="all-cat d-flex justify-content-center mt-1 h-3vh">
+                <a href="#main-container" id="allCategoriesBtn" class="bg-primary-subtle rounded rounded-5 d-flex align-items-center px-3 py-0"><span>همه دسته‌بندی‌ها</span></a>
             </div>
-            <div class="category row d-flex flex-column mx-auto  justify-content-center align-items-center my-5 " dir="ltr">
+            <div class="category row d-flex flex-column flex-wrap mx-auto  justify-content-center align-items-center my-0 w-100 h-15vh " dir="ltr">
                 <!-- Category Item -->
 
 
@@ -74,7 +72,7 @@
         </div>
     </div>
 
-    <div id="main-container" class="main container-fluid px-4 ">
+    <div id="main-container" class="main container-fluid px-2 ">
 
         <!-- Foods Items -->
 
@@ -119,7 +117,7 @@
 
 
 
-    <div class="d-flex justify-content-between align-items-center"></div>
+    <div class="d-flex justify-content-between align-items-center "></div>
 
 
 
