--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div class="order-list-container text-end pt-1 px-4 position-absolute  ">
             <img class="order-list-icon w-7 w-sm-6 w-md-5 w-lg-4 w-xl-3 " src="images/icons/order-list.svg" alt="">
             <div class="order-list-content h-100vh  bg-dark position-absolute end-0 top-0 z-n1 text-white w-0">
-                <p class="order-list-header text-center py-2 fade-out mb-3">لیست سفارش مشتری</p>
-                <span class="close-card-btn position-absolute top-1 start-5 fs-2 px-3 py-1">✕</span>
+                <p class="order-list-header text-center py-2 fade-out  text-white">لیست سفارش مشتری</p>
+                <b class="close-card-btn position-absolute top-1 start-5 fs-2 px-3 py-1 ">✕</b>
                 <div class="order-list-body fade-out"></div>
                 <div class="order-list-footer w-100 position-absolute bottom-5 end-0 "></div>
             </div>
