--- a/safoora/index.html
+++ b/safoora/index.html
@@ -68,7 +68,7 @@
     </ul>
     <div class="checkout">
       <button id="closeShopping" class="check-btn">بستن</button>
-      <button id="total" class="check-btn">قیمت کل : 0 تومان</button>
+      <button id="total" class="check-btn">   </button>
     </div>
   </div>
 
