--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 <body class="bg-secondary">
 
     <div class="theme-container theme-hide h-100vh w-10 w-sm-7 w-md-4 w-lg-3 bg-dark position-fixed top-0 ">
-        <div class="theme-settings-icon bg-dark position-relative end-100 top-20 translate-middle-y rounded-start rounded-start-5 px-2 py-0 ">
+        <div
+            class="theme-settings-icon bg-dark position-relative end-100 top-20 translate-middle-y rounded-start rounded-start-5 px-2 py-0 ">
             <img class="img-fluid w-60 w-sm-50 w-md-55 w-lg-60 rotate" src="images/icons/settings.svg" alt="">
         </div>
-        <div class="themes h-100 d-flex flex-column justify-content-center align-items-center position-absolute top-0 start-50 translate-middle-x">
-            <span class="theme-item rounded-circle p-2 my-3" style="background-color: #dc5f00;" id="default-theme"></span>
+        <div
+            class="themes h-100 d-flex flex-column justify-content-center align-items-center position-absolute top-0 start-50 translate-middle-x">
+            <span class="theme-item rounded-circle p-2 my-3" style="background-color: #dc5f00;"
+                id="default-theme"></span>
             <span class="theme-item rounded-circle  p-2 my-3" style="background-color: #bb2f98;" id="theme1"></span>
             <span class="theme-item rounded-circle  p-2 my-3" style="background-color: #3c1ccd;" id="theme2"></span>
             <span class="theme-item rounded-circle  p-2 my-3" style="background-color: #8c0fa2;" id="theme3"></span>
@@ -32,7 +35,7 @@
 
         <!-- سبد سفارش -->
 
-        <div class="order-list-container text-end pt-1 px-4 position-fixed  ">
+        <div class="order-list-container text-end pt-1 px-4 position-absolute  ">
             <img class="order-list-icon w-7 w-sm-6 w-md-5 w-lg-4 w-xl-3 " src="images/icons/order-list.svg" alt="">
             <div class="order-list-content h-100vh  bg-dark position-fixed end-0 top-0 z-3 text-white w-0">
                 <p class="order-list-header text-center py-2 fade-out  text-white">لیست سفارش مشتری</p>
@@ -52,9 +55,12 @@
         <!-- <div class="brand row"></div> -->
         <div class="top-nav row justify-content-center mx-auto fs-6s fs-sm-6 ">
             <div class="all-cat d-flex justify-content-center mt-1 h-3vh">
-                <a href="#main-container" id="allCategoriesBtn" class="bg-primary-subtle rounded rounded-5 d-flex align-items-center px-3 py-0"><span>همه دسته‌بندی‌ها</span></a>
+                <a href="#main-container" id="allCategoriesBtn"
+                    class="bg-primary-subtle rounded rounded-5 d-flex align-items-center px-3 py-0"><span>همه
+                        دسته‌بندی‌ها</span></a>
             </div>
-            <div class="category row d-flex flex-column flex-wrap mx-auto  justify-content-center align-items-center my-0 w-100 h-15vh " dir="ltr">
+            <div class="category row d-flex flex-column flex-wrap mx-auto  justify-content-center align-items-center my-0 w-100 h-15vh "
+                dir="ltr">
                 <!-- Category Item -->
 
 
