--- a/index.html
+++ b/index.html
@@ -55,11 +55,14 @@
         <!-- <div class="brand row"></div> -->
         <div class="top-nav row justify-content-center mx-auto fs-6s fs-sm-6 ">
             <div class="all-cat d-flex justify-content-center mt-1 h-3vh">
-                <a href="#main-container" id="allCategoriesBtn"
-                    class="bg-primary-subtle rounded rounded-5 d-flex align-items-center px-3 py-0"><span>همه
+                <a href="##" id="allCategoriesBtn"
+                    class="bg-primary-subtle rounded rounded-5 d-flex align-items-center px-3 py-0 z-3"><span>همه
                         دسته‌بندی‌ها</span></a>
+                <div class="all-cat-items p-5  position-fixed visually-hidden  rounded-4" dir="ltr">
+
+                </div>
             </div>
-            <div class="category row d-flex flex-column flex-wrap mx-auto  justify-content-center align-items-center my-0 w-100 h-15vh "
+            <div class="category row d-flex flex-column flex-wrap mx-auto justify-content-center align-items-center my-0 w-100 h-15vh "
                 dir="ltr">
                 <!-- Category Item -->
 
